<resources>
    <string name="app_name">Quiz.io</string>
    <string name="create_quiz">Create Quiz</string>
    <string name="app_title">Quiz App</string>
    <string name="join_quiz">Join Quiz</string>
    <string name="delete">delete</string>
    <string name="quiz_code">Quiz Code</string>
    <string name="your_name">Your name</string>
    <string name="name_hint">Insert your name here</string>
    <string name="code_hint">Insert quiz code here</string>
    <string name="code_missing">No quiz code entered..</string>
    <string name="name_missing">Please enter a valid username..</string>
    <string name="not_found">No quiz found..</string>
    <string name="waiting">Waiting for\ngame to begin</string>
    <string name="rank">Rank</string>
    <string name="points">Points</string>
    <string name="time_up">Time is up</string>
    <string name="correct">Correct</string>
    <string name="incorrect">Incorrect</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
